# versa

./: .gitignore  .gitmodules  CMakeLists.txt
include/libversa/: Compress.h  Hash.h  Logger.h  Object.h  Repo.h  Result.h  Util.h
include/versa/: Cli.h  ConsoleLogger.h
src/cli/: Cli.cpp  ConsoleLogger.cpp
src/lib/: Repo.cpp
src/libversa/: Compress.cpp  Hash.cpp  Object.cpp  Repo.cpp  Util.cpp
src/versa/: Cli.cpp  ConsoleLogger.cpp  main.cpp
